--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -13,6 +13,13 @@ election_timeout_ms = 50
 num_proposals = 10000
 storage_type = "Memory"
 
+[flexible_quorum_test]
+wait_timeout_ms = 3000
+num_threads = 8
+num_nodes = 8
+leader_quorum_size = 6
+append_quorum_size = 3
+
 [proposal_test]
 wait_timeout_ms = 5000
 num_threads = 8
