--- a/docs/structure.yml
+++ b/docs/structure.yml
@@ -1,6 +1,7 @@
 Foreword:
   Foreword:
     path: "foreword.md"
+    tags: [ "omnipaxos", "rust" ]
   Getting Started:
     path: "getting-started.md"
   Introduction:
