--- a/omnipaxos/tests/config/node1.toml
+++ b/omnipaxos/tests/config/node1.toml
@@ -3,8 +3,10 @@ configuration_id = 1
 pid = 1
 peers = [2, 3]
 buffer_size = 10000
-election_tick_timeout = 1
-resend_message_tick_timeout = 10
+# If `tick()` is called every 10ms then an election will be triggered every 100ms
+election_tick_timeout = 10
+# If `tick()` is called every 10ms then dropped messages will be resent every 1000ms
+resend_message_tick_timeout = 100
 logger_file_path = "/omnipaxos/logs"
 leader_priority = 2
 skip_prepare_use_leader = { config_id = 3, n = 5, priority = 2, pid = 2 }
