--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -17,8 +17,7 @@ storage_type = "Memory"
 wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 8
-read_quorum_size = 6
-write_quorum_size = 3
+flexible_quorum = [6, 3]
 
 [proposal_test]
 wait_timeout_ms = 5000
