--- a/omnipaxos/tests/config/node1.toml
+++ b/omnipaxos/tests/config/node1.toml
@@ -6,5 +6,5 @@ buffer_size = 100000
 logger_file_path = "/omnipaxos/logs"
 leader_priority = 2
 skip_prepare_use_leader = { n = 5, priority = 2, pid = 2 }
-flexible_quorum = [3, 1]
+flexible_quorum = { read_quorum_size = 3, write_quorum_size = 2 }
 initial_leader = { n = 1, priority = 1, pid = 1 }
