--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,17 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Clippy
         run: cargo clippy -- -D warnings -W clippy::all
+
+  check_doc_structure:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Set Up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14
+      - name: Install Dependencies
+        run: npm install
+      - name: Run Document Structure Check
+        run: node .github/scripts/doc_structure_checker.js
