--- a/omnipaxos/tests/config/node1.toml
+++ b/omnipaxos/tests/config/node1.toml
@@ -1,10 +1,9 @@
 # This file is used for testing that fields are deserialized to set values
 configuration_id = 1
 pid = 1
-peers = [2, 3]
+peers = [2, 3, 4, 5]
 buffer_size = 100000
-logger_file_path = "/omnipaxos/logs"
-leader_priority = 2
-skip_prepare_use_leader = { n = 5, pid = 2 }
-flexible_quorum = { read_quorum_size = 3, write_quorum_size = 2 }
+logger_file_path = "logs/paxos_1.log"
+leader_priority = 3
+flexible_quorum = { read_quorum_size = 4, write_quorum_size = 2 }
 initial_leader = { n = 1, priority = 3, pid = 1 }
