--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -3,34 +3,34 @@ wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 5
 election_timeout_ms = 50
-storage_type = "Memory"
+storage_type = { type = "Memory" }
 
 [consensus_test]
 wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 5
 num_proposals = 10000
-storage_type = "Memory"
+storage_type = { type = "Memory" }
 
 [proposal_test]
 wait_timeout_ms = 5000
 num_threads = 8
 num_nodes = 7
-storage_type = "Memory"
+storage_type = { type = "Memory" }
 
 [reconnect_test]
 wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 5
 resend_message_timeout_ms = 500
-storage_type = "Memory"
+storage_type = { type = "Memory" }
 
 [recovery_test]
 wait_timeout_ms = 7000
 num_threads = 8
 num_nodes = 3
 num_proposals = 100
-storage_type = "Persistent"
+storage_type = { type = "Persistent" }
 
 [gc_test]
 wait_timeout_ms = 3000
@@ -38,5 +38,8 @@ num_threads = 8
 num_nodes = 3
 num_proposals = 10000
 gc_idx = 1000
-storage_type = "Memory"
+storage_type = { type = "Memory" }
 
+[atomic_storage_test]
+num_nodes = 3
+storage_type = { type = "Broken" }
