--- a/demo/network_actor/Cargo.toml
+++ b/demo/network_actor/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net",
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 rand = "0.8"
+ratatui = "0.20"
