--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -40,6 +40,17 @@ num_proposals = 10000
 gc_idx = 1000
 storage_type = { type = "Memory" }
 
+[batching_test]
+wait_timeout_ms = 3000
+num_threads= 8
+num_nodes= 3
+batch_size= 31
+election_timeout_ms= 50
+increment_delay= 2
+num_proposals= 310
+gc_idx= 1000
+storage_type = { type = "Persistent" }
+
 [atomic_storage_test]
 num_nodes = 3
 storage_type = { type = "Broken" }
