Change directory before running script

--- a/.github/workflows/push_doc_changes_to_website.yml
+++ b/.github/workflows/push_doc_changes_to_website.yml
@@ -25,4 +25,5 @@ jobs:
 
       - name: Update docs
         run: |
-          bash utils/fetch_docs_from_omnipaxos.sh
+          cd utils
+          ./fetch_docs_from_omnipaxos.sh
