--- a/omnipaxos/tests/config/node1.toml
+++ b/omnipaxos/tests/config/node1.toml
@@ -1,12 +1,16 @@
 # This file is used for testing that fields are deserialized to set values
+[cluster_config]
 configuration_id = 1
-pid = 1
-peers = [2, 3, 4, 5]
-buffer_size = 10000
-logger_file_path = "logs/paxos_1.log"
-leader_priority = 3
+nodes = [1, 2, 3, 4, 5]
 flexible_quorum = { read_quorum_size = 4, write_quorum_size = 2 }
+
+[server_config]
+pid = 1
 # If `tick()` is called every 10ms then an election will be triggered every 100ms
 election_tick_timeout = 10
 # If `tick()` is called every 10ms then dropped messages will be resent every 1000ms
 resend_message_tick_timeout = 100
+buffer_size = 10000
+batch_size = 2
+logger_file_path = "logs/paxos_1.log"
+leader_priority = 2
