--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -40,6 +40,7 @@ storage_type = { type = "Persistent" }
 
 [gc_test]
 wait_timeout_ms = 3000
+
 num_threads = 8
 num_nodes = 3
 num_proposals = 10000
@@ -60,3 +61,6 @@ storage_type = { type = "Persistent" }
 [atomic_storage_test]
 num_nodes = 3
 storage_type = { type = "Broken" }
+
+[sync_test]
+num_nodes = 3
